small text change

--- a/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
+++ b/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
@@ -13,10 +13,10 @@
 
         <TextBlock HorizontalAlignment="Left" Margin="107,8,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="105" FontFamily="Roboto" FontSize="24" Foreground="Black"><Run Text="W" /><Run Text="elcome," /></TextBlock>
         <Button Focusable="False" BorderBrush="{x:Null}" BorderThickness="0" Foreground="White" Click="LuckFunction" Width="196" FontFamily="Roboto" FontSize="18" Background="#FF3B5998" Margin="0,147,40.8,253" HorizontalAlignment="Right">
-            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="White"><Run Text="    Daily " /><LineBreak /><Run Text="Horoscope" /></TextBlock>
+            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="White" FontSize="17.333"><Run Text="    Daily " /><LineBreak /><Run Text="Horoscope" /></TextBlock>
         </Button>
         <Button x:Name="StatusStatistics" Focusable="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Click="PostStatistics" Margin="47,147,0,253" FontFamily="Roboto" FontSize="18" Background="#FF3B5998" HorizontalAlignment="Left" Width="196" Height="55.6" BorderBrush="{x:Null}">
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" Margin="5"><Run Text="When should I" /><LineBreak /><Run Text="post new status?" /></TextBlock>
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" Margin="5" FontSize="17.333"><Run Text="When should I" /><LineBreak /><Run Text="post new status?" /></TextBlock>
         </Button>
         <TextBlock x:Name="UserName" HorizontalAlignment="Left" Margin="214,8,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="37" Width="105" FontFamily="Roboto" FontSize="24" Foreground="Black" />
         <GroupBox x:Name="groupBox" Header="Photo albums" Margin="10,0,11.6,80.2" VerticalAlignment="Bottom" Height="130.8">
