--- a/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
+++ b/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
@@ -1,12 +1,12 @@
 ﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:FacebookIntegrationApp" mc:Ignorable="d" x:Class="FacebookIntegrationApp.MainView" Title="Design Patterns App" Height="485.8" Width="547" Background="{x:Null}" FontFamily="Lucida Console">
     <Window.Resources>
-        <local:FacebookFacade x:Key="StaticAccessClassRes" />
+        <local:FacebookFacade x:Key="FacebookFacade" />
     </Window.Resources>
     <Grid Background="#FFF7F7F7">
         <GroupBox Header="Special functions!" HorizontalAlignment="Left" Margin="10,115.52,0,0" VerticalAlignment="Top" Width="519" Height="106.88" Foreground="Black" BorderBrush="#FF8B9DC3" BorderThickness="1,1,1,5">
         </GroupBox>
 
-        <Image x:Name="ProfilePic" Height="75" Stretch="Fill" VerticalAlignment="Top" ToolTip="Your photo" Margin="10,8,440.8,0" />
+        <Image Source="{Binding Path=PictureNormalURL, Source={StaticResource ResourceKey=FacebookFacade}}" x:Name="ProfilePic" Height="75" Stretch="Fill" VerticalAlignment="Top" ToolTip="Your photo" Margin="10,8,440.8,0" />
 
         <TextBox Margin="106,55.296,114.6,0" x:Name="StatusText" FontFamily="Roboto" Text="What's on your mind?" Background="{x:Null}" BorderBrush="#FF0EBD69" BorderThickness="0,0,0,2" FontSize="21.333" Foreground="#FF919191" Height="31.724" VerticalAlignment="Top" />
 
@@ -21,7 +21,8 @@
         <Button x:Name="StatusStatistics" Focusable="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Click="PostStatistics" Margin="47,147,0,253" FontFamily="Roboto" FontSize="18" Background="#FF3B5998" HorizontalAlignment="Left" Width="196" Height="55.6" BorderBrush="{x:Null}">
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" Margin="5" FontSize="17.333"><Run Text="When should I" /><LineBreak /><Run Text="post new status?" /></TextBlock>
         </Button>
-        <TextBlock x:Name="UserName" HorizontalAlignment="Left" Margin="214,8,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="37" Width="105" FontFamily="Roboto" FontSize="24" Foreground="Black" />
+
+        <TextBlock Text="{Binding Path=FirstName, Source={StaticResource ResourceKey=FacebookFacade}}" x:Name="UserName" HorizontalAlignment="Left" Margin="214,8,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="37" Width="105" FontFamily="Roboto" FontSize="24" Foreground="Black" />
         <GroupBox x:Name="groupBox" Header="Photo albums" Margin="10,0,11.6,80.2" VerticalAlignment="Bottom" Height="130.8">
             <ListBox x:Name="albumListListView" HorizontalContentAlignment="Stretch" Margin="0,3,-3,-0.2" BorderBrush="Black" Background="#FFF7F7F7" SelectionChanged="AlbumSelectionChangeListener" MouseDoubleClick="ListView_MouseDoubleClick">
                 <ListBox.ItemTemplate>
