--- a/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
+++ b/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
@@ -1,4 +1,4 @@
-﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:FacebookIntegrationApp" mc:Ignorable="d" x:Class="FacebookIntegrationApp.MainView" Title="Design Patterns App" Height="485.8" Width="547" Background="{x:Null}" FontFamily="Lucida Console">
+﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:FacebookIntegrationApp" mc:Ignorable="d" x:Class="FacebookIntegrationApp.MainView" Title="Design Patterns App" Height="584.2" Width="547" Background="{x:Null}" FontFamily="Lucida Console">
     <Window.Resources>
         <local:FacebookSingleton x:Key="FacebookSingleton" />
     </Window.Resources>
@@ -15,16 +15,16 @@
 
 
         <TextBlock HorizontalAlignment="Left" Margin="107,8,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="105" FontFamily="Roboto" FontSize="24" Foreground="Black"><Run Text="W" /><Run Text="elcome," /></TextBlock>
-        <Button Focusable="False" BorderBrush="{x:Null}" BorderThickness="0" Foreground="White" Click="LuckFunction" Width="196" FontFamily="Roboto" FontSize="18" Background="#FF3B5998" Margin="0,147,40.8,253" HorizontalAlignment="Right">
+        <Button Focusable="False" BorderBrush="{x:Null}" BorderThickness="0" Foreground="White" Click="LuckFunction" Width="196" FontFamily="Roboto" FontSize="18" Background="#FF3B5998" Margin="0,147,40.8,0" HorizontalAlignment="Right" Height="55.6" VerticalAlignment="Top">
             <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="White" FontSize="17.333"><Run Text="    Daily " /><LineBreak /><Run Text="Horoscope" /></TextBlock>
         </Button>
-        <Button x:Name="StatusStatistics" Focusable="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Click="PostStatistics" Margin="47,147,0,253" FontFamily="Roboto" FontSize="18" Background="#FF3B5998" HorizontalAlignment="Left" Width="196" Height="55.6" BorderBrush="{x:Null}">
+        <Button x:Name="StatusStatistics" Focusable="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Click="PostStatistics" Margin="48.2,147,0,352" FontFamily="Roboto" FontSize="18" Background="#FF3B5998" HorizontalAlignment="Left" Width="196" Height="55.6" BorderBrush="{x:Null}">
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" Margin="5" FontSize="17.333"><Run Text="When should I" /><LineBreak /><Run Text="post new status?" /></TextBlock>
         </Button>
 
         <TextBlock Text="{Binding Path=FirstName, Source={StaticResource ResourceKey=FacebookSingleton}}" x:Name="UserName" HorizontalAlignment="Left" Margin="214,8,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="37" Width="105" FontFamily="Roboto" FontSize="24" Foreground="Black" />
         <GroupBox x:Name="groupBox" Header="Photo albums" Margin="10,0,11.6,80.2" VerticalAlignment="Bottom" Height="130.8">
-            <ListBox ItemsSource="{Binding Path=Albums, Source={StaticResource ResourceKey=FacebookSingleton}}" x:Name="albumListListView" HorizontalContentAlignment="Stretch" Margin="0,3,-3,-0.2" BorderBrush="Black" Background="#FFF7F7F7" SelectionChanged="AlbumSelectionChangeListener" MouseDoubleClick="ListViewMouseDoubleClick">
+            <ListBox ItemsSource="{Binding Path=Albums, Source={StaticResource ResourceKey=FacebookSingleton}}" x:Name="albumListListView" HorizontalContentAlignment="Stretch" Margin="0,3,-3,-0.2" BorderBrush="{x:Null}" Background="#FFF7F7F7" SelectionChanged="AlbumSelectionChangeListener" MouseDoubleClick="ListViewMouseDoubleClick">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <WrapPanel>
@@ -47,8 +47,14 @@
         </Button>
         <TextBox x:Name="albumCommentTextBox" Height="70.2" Margin="10,0,221.6,10" TextWrapping="Wrap" Text="Comment on album" VerticalAlignment="Bottom" Background="{x:Null}" FontFamily="Roboto" Foreground="#FF7F7F7F" />
         <Button x:Name="button" Content="Add album comment" HorizontalAlignment="Right" Margin="0,0,11.6,10" VerticalAlignment="Bottom" Width="175.067" Height="25.467" Background="#FF8B9DC3" BorderBrush="{x:Null}" BorderThickness="0" Foreground="White" FontFamily="Roboto" Click="AddAlbumCommentClickListener" />
+        <GroupBox x:Name="groupBox1" Header="Albums Sorting Options" Margin="10,250.2,11.6,216" BorderBrush="#FFD5DFE5">
+            <Grid>
+                <Button Margin="0,0,252,10" Background="#FF3B5998" Content="Sort by amount of pictures" FontFamily="Roboto" Foreground="White" FontSize="17.333" BorderBrush="{x:Null}"></Button>
+                <Button HorizontalAlignment="Right" Width="247" Margin="0,0,0,10" Background="#FF3B5998" FontSize="17.333" FontFamily="Roboto" Content="Sort by creation date" Foreground="White" BorderBrush="{x:Null}"></Button>
+            </Grid>
+        </GroupBox>
         <Grid x:Name="confirmationGrid" Background="#66000000" MouseDown="ClearSucessNotification">
-            <Border CornerRadius="50" Background="#FFF7F7F7" Margin="122.4,90,111.6,86.4" BorderThickness="1">
+            <Border CornerRadius="50" Background="#FFF7F7F7" Margin="122.4,90,111.6,154.8" BorderThickness="1">
                 <Grid>
                     <Image x:Name="img_Facebook_like_thumb_png1" Margin="93.987,50,91.843,0" Source="img/Facebook_like_thumb.png" Stretch="Fill" VerticalAlignment="Top" d:LayoutOverrides="Width" Height="116.802" />
 
